--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -8,7 +8,7 @@
 # changed if the `index.yaml` file changes. For git based repositories, it does
 # when the hash of the last commit in the branch you set up changes. This does
 # NOT apply to ownership claim operations, which are processed immediately.
-repositoryID: <your-repository-id-here>
+repositoryID: 9c527269-6a0e-4751-8aa8-a4c0245f2bef
 owners:
-  - name: <your name>
-    email: <your email>
+  - name: Jason DeTiberus
+    email: detiber@gmail.com
