--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@
     workflow_dispatch:
   
   env:
-    IMAGE_NAME: "${{ github.event.repository.name }}"  # the name of the image produced by this build, matches repo names
+    IMAGE_NAME: "beardy-achillobator"
     IMAGE_DESC: "The preferred achillobator-based OS of bearded developers."
     IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"
     DEFAULT_TAG: "latest"
